[package]
name = "movetex"
version = "1.0.0"
edition = "2021"
description = "Non-blocking, atomic-based synchronization primitive allowing multiple readers and single writer for complex data structures without blocking readers."
categories = ["data-structures", "memory-management"]
keywords = ["atomic", "Arc"]
license = "MIT"

[dependencies]


[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"

[[bench]]
name = "rw"
harness = false
